--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   font-size: 62.5%;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  font-weight: 550;
+  color: #363434;
+  background-color: #ffeedb;
 }
