add spin animation

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,3 +14,30 @@ body {
   color: #363434;
   background-color: #ffeedb;
 }
+
+@-moz-keyframes spin {
+  from {
+    -moz-transform: rotate(360deg);
+  }
+  to {
+    -moz-transform: rotate(0deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  from {
+    -webkit-transform: rotate(360deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
